# aquazik

./: .gitignore  comp_1.csv  instruments_features.json  music.mid  notes_detections_results.txt  pyproject.toml  resultats_Gamme_tests.txt  results_PinPanther_no_low_energy.txt  results_PinkPanther_harmStrict.txt  results_SuperMario.txt  results_SuperMario_1.txt  results_fundReinforced_harmClean.txt  results_pinkPanther_with_fund_harm_octave_strict.txt  résultats.txt
audio_in/: PinkPanther_Trumpet_Only.mid
src/: MidiV2.py  constants.py  main.py  run_test.py
src/animation/: algues.py  aquarium.py  crab.py  drawings.py  fish.py  starfish.py
src/audio_processing/: MidiV2.py  audio_utils.py  baba.py  compare_midi.py  freq_analysis.py  instrument_split.py  midi_reader.py  raw_signal_analysis.py  test.py  wavelet_applications  wavelet_applications.py
