[project]
name = "aquazik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=5.5",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pydub>=0.25.1",
    "python-audio>=0.1.1",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
]
